// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposits list renders correctly a single deposit 1`] = `
<div>
  <div
    class=" woocommerce-payments-page"
  >
    <h2
      class="screen-reader-text"
    >
      Filters
    </h2>
    <div
      class="woocommerce-filters"
    >
      <div
        class="woocommerce-filters__basic-filters"
      >
        <div
          class="woocommerce-filters-filter"
        >
          <span
            class="woocommerce-filters-label"
          >
            Deposit currency
            :
          </span>
          <div
            class="components-dropdown"
          >
            <button
              aria-expanded="false"
              class="components-button woocommerce-dropdown-button"
              type="button"
            >
              <div
                class="woocommerce-dropdown-button__labels"
              >
                <span>
                  All
                </span>
              </div>
            </button>
          </div>
        </div>
        <div
          class="woocommerce-filters-filter"
        >
          <span
            class="woocommerce-filters-label"
          >
            Show
            :
          </span>
          <div
            class="components-dropdown"
          >
            <button
              aria-expanded="false"
              class="components-button woocommerce-dropdown-button"
              type="button"
            >
              <div
                class="woocommerce-dropdown-button__labels"
              >
                <span>
                  All deposits
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="components-card is-size-medium woocommerce-table wcpay-deposits-list woocommerce-report-table has-actions has-menu css-1xs3c37-CardUI e1q7k77g0"
    >
      <div
        class="components-flex components-card__header is-size-medium e1q7k77g1 css-jsa6v9-Flex-HeaderUI eboqfv50"
      >
        <h2
          class="css-1f0yw52-Text e15wbhsk0"
          color="#23282d"
          size="16"
        >
          Deposit history
        </h2>
        <div
          class="woocommerce-table__actions"
        >
          <button
            class="components-button woocommerce-table__download-button"
            type="button"
          >
            <svg
              class="gridicon gridicons-cloud-download"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M18 9c-.01 0-.017.002-.025.003C17.72 5.646 14.922 3 11.5 3 7.91 3 5 5.91 5 9.5c0 .524.07 1.03.186 1.52C5.123 11.015 5.064 11 5 11c-2.21 0-4 1.79-4 4 0 1.202.54 2.267 1.38 3h18.593C22.196 17.09 23 15.643 23 14c0-2.76-2.24-5-5-5zm-6 7l-4-5h3V8h2v3h3l-4 5z"
                />
              </g>
            </svg>
            <span
              class="woocommerce-table__download-button__label"
            >
              Download
            </span>
          </button>
        </div>
        <div
          class="woocommerce-ellipsis-menu"
        >
          <div
            class="components-dropdown"
          >
            <button
              aria-expanded="false"
              class="components-button woocommerce-ellipsis-menu__toggle"
              title="Choose which values to display"
              type="button"
            >
              <svg
                class="gridicon gridicons-ellipsis"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M7 12c0 1.104-.896 2-2 2s-2-.896-2-2 .896-2 2-2 2 .896 2 2zm12-2c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2zm-7 0c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2z"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="components-card__body css-xmjzce-BodyUI e1q7k77g3"
      >
        <div
          aria-hidden="false"
          aria-labelledby="caption-1"
          class="woocommerce-table__table"
          role="group"
        >
          <table>
            <caption
              class="woocommerce-table__caption screen-reader-text"
              id="caption-1"
            >
              Deposit history
            </caption>
            <tbody>
              <tr>
                <th
                  class="woocommerce-table__header info-button is-sorted is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="false"
                  />
                </th>
                <th
                  aria-sort="descending"
                  class="woocommerce-table__header date-time is-left-aligned is-sortable is-sorted"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    aria-describedby="header-1-1"
                    class="components-button"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      focusable="false"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                      />
                    </svg>
                    <span
                      aria-hidden="true"
                    >
                      Date
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Date
                    </span>
                  </button>
                  <span
                    class="screen-reader-text"
                    id="header-1-1"
                  >
                    Sort by Date in ascending order
                  </span>
                </th>
                <th
                  class="woocommerce-table__header is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="true"
                  >
                    Type
                  </span>
                  <span
                    class="screen-reader-text"
                  >
                    Type
                  </span>
                </th>
                <th
                  aria-sort="none"
                  class="woocommerce-table__header is-sortable is-numeric"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    aria-describedby="header-1-3"
                    class="components-button"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      focusable="false"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                      />
                    </svg>
                    <span
                      aria-hidden="true"
                    >
                      Amount
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Amount
                    </span>
                  </button>
                  <span
                    class="screen-reader-text"
                    id="header-1-3"
                  >
                    Sort by Amount in descending order
                  </span>
                </th>
                <th
                  class="woocommerce-table__header is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="true"
                  >
                    Status
                  </span>
                  <span
                    class="screen-reader-text"
                  >
                    Status
                  </span>
                </th>
                <th
                  class="woocommerce-table__header is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="true"
                  >
                    Bank account
                  </span>
                  <span
                    class="screen-reader-text"
                  >
                    Bank account
                  </span>
                </th>
              </tr>
              <tr>
                <th
                  class="woocommerce-table__item info-button is-sorted is-left-aligned"
                  scope="row"
                >
                  <a
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                  >
                    <svg
                      class="gridicon gridicons-info-outline needs-offset"
                      height="18"
                      viewBox="0 0 24 24"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.41 0-8 3.59-8 8s3.59 8 8 8 8-3.59 8-8-3.59-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                        />
                      </g>
                    </svg>
                  </a>
                </th>
                <td
                  class="woocommerce-table__item date-time is-left-aligned is-sorted"
                >
                  <a
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                  >
                    Jan 2, 2020
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                    tabindex="-1"
                  >
                    Deposit
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-numeric"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                    tabindex="-1"
                  >
                    $20.00 USD
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                    tabindex="-1"
                  >
                    Paid
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                    tabindex="-1"
                  >
                    MOCK BANK •••• 1234 (USD)
                  </a>
                </td>
              </tr>
              <tr>
                <th
                  class="woocommerce-table__item info-button is-sorted is-left-aligned"
                  scope="row"
                >
                  <a
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                  >
                    <svg
                      class="gridicon gridicons-info-outline needs-offset"
                      height="18"
                      viewBox="0 0 24 24"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.41 0-8 3.59-8 8s3.59 8 8 8 8-3.59 8-8-3.59-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                        />
                      </g>
                    </svg>
                  </a>
                </th>
                <td
                  class="woocommerce-table__item date-time is-left-aligned is-sorted"
                >
                  <a
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                  >
                    Jan 3, 2020
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                    tabindex="-1"
                  >
                    Withdrawal
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-numeric"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                    tabindex="-1"
                  >
                    $30.00 USD
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                    tabindex="-1"
                  >
                    Pending
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                    tabindex="-1"
                  >
                    MOCK BANK •••• 1234 (USD)
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="components-flex components-card__footer is-size-medium e1q7k77g4 css-5hda2c-Flex-FooterUI eboqfv50"
      >
        <ul
          class="woocommerce-table__summary"
          role="complementary"
        >
          <li
            class="woocommerce-table__summary-item"
          >
            <span
              class="woocommerce-table__summary-value"
            >
              1
            </span>
            <span
              class="woocommerce-table__summary-label"
            >
              deposit
            </span>
          </li>
          <li
            class="woocommerce-table__summary-item"
          >
            <span
              class="woocommerce-table__summary-value"
            >
              $50.00 USD
            </span>
            <span
              class="woocommerce-table__summary-label"
            >
              total
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Deposits list renders correctly with multiple currencies 1`] = `
<div>
  <div
    class=" woocommerce-payments-page"
  >
    <h2
      class="screen-reader-text"
    >
      Filters
    </h2>
    <div
      class="woocommerce-filters"
    >
      <div
        class="woocommerce-filters__basic-filters"
      >
        <div
          class="woocommerce-filters-filter"
        >
          <span
            class="woocommerce-filters-label"
          >
            Deposit currency
            :
          </span>
          <div
            class="components-dropdown"
          >
            <button
              aria-expanded="false"
              class="components-button woocommerce-dropdown-button"
              type="button"
            >
              <div
                class="woocommerce-dropdown-button__labels"
              >
                <span>
                  All
                </span>
              </div>
            </button>
          </div>
        </div>
        <div
          class="woocommerce-filters-filter"
        >
          <span
            class="woocommerce-filters-label"
          >
            Show
            :
          </span>
          <div
            class="components-dropdown"
          >
            <button
              aria-expanded="false"
              class="components-button woocommerce-dropdown-button"
              type="button"
            >
              <div
                class="woocommerce-dropdown-button__labels"
              >
                <span>
                  All deposits
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="components-card is-size-medium woocommerce-table wcpay-deposits-list woocommerce-report-table has-actions has-menu css-1xs3c37-CardUI e1q7k77g0"
    >
      <div
        class="components-flex components-card__header is-size-medium e1q7k77g1 css-jsa6v9-Flex-HeaderUI eboqfv50"
      >
        <h2
          class="css-1f0yw52-Text e15wbhsk0"
          color="#23282d"
          size="16"
        >
          Deposit history
        </h2>
        <div
          class="woocommerce-table__actions"
        >
          <button
            class="components-button woocommerce-table__download-button"
            type="button"
          >
            <svg
              class="gridicon gridicons-cloud-download"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M18 9c-.01 0-.017.002-.025.003C17.72 5.646 14.922 3 11.5 3 7.91 3 5 5.91 5 9.5c0 .524.07 1.03.186 1.52C5.123 11.015 5.064 11 5 11c-2.21 0-4 1.79-4 4 0 1.202.54 2.267 1.38 3h18.593C22.196 17.09 23 15.643 23 14c0-2.76-2.24-5-5-5zm-6 7l-4-5h3V8h2v3h3l-4 5z"
                />
              </g>
            </svg>
            <span
              class="woocommerce-table__download-button__label"
            >
              Download
            </span>
          </button>
        </div>
        <div
          class="woocommerce-ellipsis-menu"
        >
          <div
            class="components-dropdown"
          >
            <button
              aria-expanded="false"
              class="components-button woocommerce-ellipsis-menu__toggle"
              title="Choose which values to display"
              type="button"
            >
              <svg
                class="gridicon gridicons-ellipsis"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M7 12c0 1.104-.896 2-2 2s-2-.896-2-2 .896-2 2-2 2 .896 2 2zm12-2c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2zm-7 0c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2z"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="components-card__body css-xmjzce-BodyUI e1q7k77g3"
      >
        <div
          aria-hidden="false"
          aria-labelledby="caption-0"
          class="woocommerce-table__table"
          role="group"
        >
          <table>
            <caption
              class="woocommerce-table__caption screen-reader-text"
              id="caption-0"
            >
              Deposit history
            </caption>
            <tbody>
              <tr>
                <th
                  class="woocommerce-table__header info-button is-sorted is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="false"
                  />
                </th>
                <th
                  aria-sort="descending"
                  class="woocommerce-table__header date-time is-left-aligned is-sortable is-sorted"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    aria-describedby="header-0-1"
                    class="components-button"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      focusable="false"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                      />
                    </svg>
                    <span
                      aria-hidden="true"
                    >
                      Date
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Date
                    </span>
                  </button>
                  <span
                    class="screen-reader-text"
                    id="header-0-1"
                  >
                    Sort by Date in ascending order
                  </span>
                </th>
                <th
                  class="woocommerce-table__header is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="true"
                  >
                    Type
                  </span>
                  <span
                    class="screen-reader-text"
                  >
                    Type
                  </span>
                </th>
                <th
                  aria-sort="none"
                  class="woocommerce-table__header is-sortable is-numeric"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    aria-describedby="header-0-3"
                    class="components-button"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      focusable="false"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                      />
                    </svg>
                    <span
                      aria-hidden="true"
                    >
                      Amount
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Amount
                    </span>
                  </button>
                  <span
                    class="screen-reader-text"
                    id="header-0-3"
                  >
                    Sort by Amount in descending order
                  </span>
                </th>
                <th
                  class="woocommerce-table__header is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="true"
                  >
                    Status
                  </span>
                  <span
                    class="screen-reader-text"
                  >
                    Status
                  </span>
                </th>
                <th
                  class="woocommerce-table__header is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="true"
                  >
                    Bank account
                  </span>
                  <span
                    class="screen-reader-text"
                  >
                    Bank account
                  </span>
                </th>
              </tr>
              <tr>
                <th
                  class="woocommerce-table__item info-button is-sorted is-left-aligned"
                  scope="row"
                >
                  <a
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                  >
                    <svg
                      class="gridicon gridicons-info-outline needs-offset"
                      height="18"
                      viewBox="0 0 24 24"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.41 0-8 3.59-8 8s3.59 8 8 8 8-3.59 8-8-3.59-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                        />
                      </g>
                    </svg>
                  </a>
                </th>
                <td
                  class="woocommerce-table__item date-time is-left-aligned is-sorted"
                >
                  <a
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                  >
                    Jan 2, 2020
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                    tabindex="-1"
                  >
                    Deposit
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-numeric"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                    tabindex="-1"
                  >
                    $20.00 USD
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                    tabindex="-1"
                  >
                    Paid
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
                    tabindex="-1"
                  >
                    MOCK BANK •••• 1234 (USD)
                  </a>
                </td>
              </tr>
              <tr>
                <th
                  class="woocommerce-table__item info-button is-sorted is-left-aligned"
                  scope="row"
                >
                  <a
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                  >
                    <svg
                      class="gridicon gridicons-info-outline needs-offset"
                      height="18"
                      viewBox="0 0 24 24"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.41 0-8 3.59-8 8s3.59 8 8 8 8-3.59 8-8-3.59-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                        />
                      </g>
                    </svg>
                  </a>
                </th>
                <td
                  class="woocommerce-table__item date-time is-left-aligned is-sorted"
                >
                  <a
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                  >
                    Jan 3, 2020
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                    tabindex="-1"
                  >
                    Withdrawal
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-numeric"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                    tabindex="-1"
                  >
                    $30.00 USD
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                    tabindex="-1"
                  >
                    Pending
                  </a>
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  <a
                    class="woocommerce-table__clickable-cell"
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
                    tabindex="-1"
                  >
                    MOCK BANK •••• 1234 (USD)
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="components-flex components-card__footer is-size-medium e1q7k77g4 css-5hda2c-Flex-FooterUI eboqfv50"
      >
        <ul
          class="woocommerce-table__summary"
          role="complementary"
        >
          <li
            class="woocommerce-table__summary-item"
          >
            <span
              class="woocommerce-table__summary-value"
            >
              2
            </span>
            <span
              class="woocommerce-table__summary-label"
            >
              deposits
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
